tests/invalid/sorted_no_args/main.py
def main() -> None:
    xs = sorted()
    print(xs)
